# idaia

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Modelfile  README.md  README_old.md  UNINSTALL_MANUAL.md  VibeDesignCommands.py  install.sh  package.xml  requirements.txt  uninstall.sh
addon/idaia/: Init.py  InitGui.py  metadata.txt
addon/idaia/core/: executor.py  llm_client.py
addon/idaia/ui/: panel.py
idaiavibedesign/: AIAgent.py  AISettings.py  IdaiaVibeDesignCommands.py  InitGui.py  OLLAMA_500_TROUBLESHOOTING.md  PARAMETRIC_FEATURES.md  ParametricManager.py  README.md  VibeDesignCommands.py  __init__.py  metadata.txt  package.xml
idaiavibedesign/old/: Init.py  InitGui.py  metadata.txt
indev/: InitGui.py
