<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="http://www.freecadweb.org/wiki/Package_Metadata">
  <name>IdaiaVibeDesign</name>
  <description>IdaiaVibeDesign addon for FreeCAD</description>
  <version>1.0.0</version>
  <date>2025-08-26</date>
  <author>Pedro Candeias</author>
  <maintainer email="eu@pedrocandeias.net">Pedro Candeias</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/pedrocandeias/idaia</url>
  <url type="repository">https://github.com/pedrocandeias/idaia.git</url>
  <icon>icon.svg</icon>
  <classname>IdaiaVibeDesignWorkbench</classname>
  <subdirectory>./</subdirectory>
  <file type="content">
    <location>./</location>
  </file>
  <depend>FreeCAD</depend>
  <freecadmin>0.19</freecadmin>
  <pythonmin>3.6</pythonmin>
  <content>
    <workbench>
      <classname>IdaiaVibeDesignWorkbench</classname>
      <subdirectory>./</subdirectory>
    </workbench>
  </content>
</package>