<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
    <name>VibeDesign</name>
    <description>Natural language CAD modeling workbench for FreeCAD</description>
    <version>1.0.0</version>
    <date>2025-08-25</date>
    <maintainer email="eu@pedrocandeias.net">Pedro Candeias</maintainer>
    <license file="LICENSE">MIT</license>
    <url type="website">https://github.com/pedrocandeias/idaia</url>
    <url type="repository">https://github.com/pedrocandeias/idaia.git</url>
    <url type="bugtracker">https://github.com/pedrocandeias/idaia/issues</url>
    <url type="readme">https://github.com/pedrocandeias/idaia/blob/main/README.md</url>
    <author email="eu@pedrocandeias.net">Pedro Candeias</author>
    <depend>FreeCAD</depend>
    <python_require>requests</python_require>
    <tag>CAD</tag>
    <tag>Natural Language</tag>
    <tag>AI</tag>
    <tag>Modeling</tag>
    <tag>LLM</tag>
    <tag>Ollama</tag>
    <tag>OpenAI</tag>
    <freecad_min>0.20</freecad_min>
    <content>
        <workbench>
            <classname>VibeDesignWorkbench</classname>
            <name>Vibe Design</name>
            <description>Create CAD models using natural language descriptions</description>
            <subdirectory>./</subdirectory>
        </workbench>
    </content>
</package>